// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MenuPage renders correctly 1`] = `
<DocumentFragment>
  <main>
    <header />
    <section
      class="menu__section"
    >
      <div
        class="menu container"
      >
        <div
          class="row"
        >
          <div
            class="col-12"
            data-cy="menuContent"
          >
            <div>
              [object Object]
            </div>
            <hr />
          </div>
          <div
            class="menu__image col-lg-4 col-md-6"
            data-cy="menuImage"
          >
            <div>
              <img
                alt="alt"
                src="src"
              />
            </div>
          </div>
          <div
            class="menu__image col-lg-4 col-md-6"
            data-cy="menuImage"
          >
            <div>
              <img
                alt="alt"
                src="src"
              />
            </div>
          </div>
          <div
            class="menu__image col-lg-4 col-md-6"
            data-cy="menuImage"
          >
            <div>
              <img
                alt="alt"
                src="src"
              />
            </div>
          </div>
        </div>
      </div>
    </section>
  </main>
</DocumentFragment>
`;

exports[`MenuPageTemplate renders GatsbyImage 1`] = `
<DocumentFragment>
  <header />
  <section
    class="menu__section"
  >
    <div
      class="menu container"
    >
      <div
        class="row"
      >
        <div
          class="col-12"
          data-cy="menuContent"
        >
          <div>
            content
          </div>
          <hr />
        </div>
        <div
          class="menu__image col-lg-4 col-md-6"
          data-cy="menuImage"
        >
          <div>
            <img
              alt="alt"
              src="src"
            />
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`MenuPageTemplate renders content correctly 1`] = `
<DocumentFragment>
  <header />
  <section
    class="menu__section"
  >
    <div
      class="menu container"
    >
      <div
        class="row"
      >
        <div
          class="col-12"
          data-cy="menuContent"
        >
          <div>
            content
          </div>
          <hr />
        </div>
        <div
          class="menu__image col-lg-4 col-md-6"
          data-cy="menuImage"
        >
          <div>
            <img
              alt="alt"
              src="src"
            />
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`MenuPageTemplate renders html content correctly 1`] = `
<DocumentFragment>
  <header />
  <section
    class="menu__section"
  >
    <div
      class="menu container"
    >
      <div
        class="row"
      >
        <div
          class="col-12"
          data-cy="menuContent"
        >
          <div>
            [object Object]
          </div>
          <hr />
        </div>
        <div
          class="menu__image col-lg-4 col-md-6"
          data-cy="menuImage"
        >
          <div>
            <img
              alt="alt"
              src="src"
            />
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
